--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,57 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    a:hover {
+      @apply underline;
+    }
+  
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      @apply font-sans my-6 font-bold;
+    }
+  
+    h1 {
+      @apply text-4xl;
+    }
+  
+    h2 {
+      @apply text-3xl;
+    }
+    h3 {
+      @apply text-2xl;
+    }
+    h4 {
+      @apply text-xl;
+    }
+    h5 {
+      @apply text-lg;
+    }
+  
+    p {
+      @apply my-2;
+    }
+  
+    ul,
+    ol {
+      @apply my-4;
+    }
+  
+    ul {
+      list-style-type: disc;
+    }
+  
+    ol {
+      list-style-type: decimal;
+    }
+  
+    li {
+      @apply my-2;
+    }
+  }
